Support Ctrl and Alt in mouse tracking mode

Konsole uses Shift to bypass mouse tracking mode, so we don't support
that one.  We also don't support Alt + wheel, since Qt uses ihat to
simulate an horizontal wheel.

BUG: 442306